@@ -1841,3 +1841,4 @@ sk_X509_LOOKUP_sort                     1865
 sk_POLICYQUALINFO_sort                  1866
 sk_X509_CRL_sort                        1867
 sk_DIST_POINT_sort                      1868
+RSA_check_key                           1869
